# Azure-openai-sql-agent

./: README.md  pyproject.toml  requirements.txt
